--- a/app/src/main/res/layout/content_scrolling.xml
+++ b/app/src/main/res/layout/content_scrolling.xml
@@ -6,6 +6,8 @@
     android:id="@+id/eventList"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:scrollbarStyle="outsideOverlay"
+    android:scrollbars="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.biryanistudio.tatvaapp.ScrollingActivity"
     tools:showIn="@layout/activity_scrolling"/>
