--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card"
     android:layout_width="match_parent"
@@ -8,117 +7,52 @@
     android:layout_margin="@dimen/text_margin"
     android:clickable="true"
     android:foreground="?android:attr/selectableItemBackground"
-    android:paddingTop="16dp"
+    android:paddingTop="8dp"
     card_view:cardCornerRadius="@dimen/cardview_default_radius"
     card_view:cardElevation="@dimen/cardview_default_elevation"
     card_view:cardPreventCornerOverlap="true"
-    card_view:cardUseCompatPadding="true">
+    card_view:cardUseCompatPadding="true"
+    card_view:contentPadding="8dp">
 
-    <LinearLayout
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/text_margin"
-            android:textAllCaps="true"
-            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
-            android:textStyle="bold"/>
-
-        <TextView
-            android:id="@+id/timings"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/text_margin"
-            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
-            android:textStyle="italic|bold"/>
-
-        <TextView
-            android:id="@+id/desc"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/text_margin"
-            android:textAppearance="@android:style/TextAppearance.DeviceDefault"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/text_margin"
-            android:text="@string/organizers"
-            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
-            android:textStyle="italic"/>
-
-        <LinearLayout
-            android:id="@+id/organizers"
+        <ImageView
+            android:id="@+id/poster"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingBottom="@dimen/text_margin"
-            android:paddingStart="@dimen/text_margin"
-            android:paddingEnd="@dimen/text_margin">
+            android:scaleType="fitCenter" />
 
-            <LinearLayout
-                android:layout_weight="1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/contact1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
-                android:textStyle="bold"
-                android:gravity="center"
-                android:paddingBottom="@dimen/text_margin"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/poster"
+            android:background="@color/colorBackground"
+            android:orientation="vertical">
 
             <TextView
-                android:id="@+id/phone1"
+                android:id="@+id/title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:autoLink="phone"
-                android:gravity="center"
-                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
-                android:paddingBottom="@dimen/text_margin"/>
+                android:paddingTop="@dimen/text_margin"
+                android:textAllCaps="true"
+                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
+                android:textStyle="bold" />
 
-                </LinearLayout>
-            <LinearLayout
-                android:layout_weight="1"
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/timings"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/contact2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
-                    android:textStyle="bold"
-                    android:gravity="center"
-                    android:paddingBottom="@dimen/text_margin"/>
-
-                <TextView
-                    android:id="@+id/phone2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:autoLink="phone"
-                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
-                    android:gravity="center"
-                    android:paddingBottom="@dimen/text_margin"/>
-
-            </LinearLayout>
-
+                android:paddingBottom="@dimen/text_margin"
+                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
+                android:textStyle="italic" />
         </LinearLayout>
 
 
-    </LinearLayout>
+    </RelativeLayout>
 
 
 </android.support.v7.widget.CardView>
