--- a/app/src/main/res/layout/activity_scrolling.xml
+++ b/app/src/main/res/layout/activity_scrolling.xml
@@ -13,6 +13,7 @@
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
         android:layout_height="@dimen/app_bar_height"
+        android:elevation="10dp"
         android:fitsSystemWindows="true"
         android:theme="@style/AppTheme.AppBarOverlay">
 
@@ -20,7 +21,7 @@
             android:id="@+id/toolbar_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:elevation="8dp"
+            android:elevation="4dp"
             android:fitsSystemWindows="true"
             app:layout_scrollFlags="enterAlways|enterAlwaysCollapsed|scroll"
             app:titleEnabled="true">
@@ -28,15 +29,16 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:elevation="4dp"
                 android:scaleType="fitCenter"
                 android:src="@mipmap/ic_launcher"
-                app:layout_collapseMode="parallax" />
+                app:layout_collapseMode="pin" />
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbarnew"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                android:elevation="8dp"
+                android:elevation="4dp"
                 app:layout_collapseMode="pin"
                 app:popupTheme="@style/AppTheme.PopupOverlay"/>
 
@@ -52,7 +54,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@android:drawable/ic_dialog_map"
+        android:src="@drawable/map"
         android:transitionName="@string/fab_transition"/>
 
 </android.support.design.widget.CoordinatorLayout>
