--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -8,13 +8,13 @@
     android:fitsSystemWindows="true">
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/fabMaps"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:layout_margin="@dimen/fab_margin"
         android:src="@drawable/navigation"
-        android:transitionName="@string/fab_transition"/>
+        android:transitionName="fab_maps" />
 
     <fragment android:id="@+id/map"
               android:name="com.google.android.gms.maps.SupportMapFragment"
