--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -12,6 +12,7 @@
 
 
     <android.support.v7.widget.CardView
+        android:id="@+id/aboutCard"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
@@ -59,19 +60,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:paddingBottom="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_horizontal_margin">
-
-                <ImageButton
-                    android:id="@+id/phoneButton"
-                    android:layout_width="0dp"
-                    android:layout_height="48dp"
-                    android:layout_weight="1"
-                    android:background="#2848D8"
-                    android:contentDescription="@string/phone"
-                    android:padding="@dimen/activity_horizontal_margin"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/handset" />
 
                 <ImageButton
                     android:id="@+id/facebookButton"
@@ -107,6 +96,25 @@
                     android:scaleType="fitCenter"
                     android:src="@drawable/website" />
 
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:paddingBottom="@dimen/activity_horizontal_margin">
+
+                <ImageButton
+                    android:id="@+id/phoneButton"
+                    android:layout_width="0dp"
+                    android:layout_height="48dp"
+                    android:layout_weight="1"
+                    android:background="#2E7D32"
+                    android:contentDescription="@string/phone"
+                    android:padding="@dimen/activity_horizontal_margin"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/handset" />
+
                 <ImageButton
                     android:id="@+id/playButton"
                     android:layout_width="0dp"
@@ -117,6 +125,17 @@
                     android:padding="@dimen/activity_horizontal_margin"
                     android:scaleType="fitCenter"
                     android:src="@drawable/play" />
+
+                <ImageButton
+                    android:id="@+id/mailButton"
+                    android:layout_width="0dp"
+                    android:layout_height="48dp"
+                    android:layout_weight="1"
+                    android:background="#2ECC71"
+                    android:contentDescription="@string/google_play"
+                    android:padding="@dimen/activity_horizontal_margin"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/mail" />
 
             </LinearLayout>
 
@@ -133,10 +152,10 @@
                 android:orientation="horizontal">
 
                 <LinearLayout
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:layout_weight="3"
+                    android:layout_weight="1"
                     android:foreground="?android:attr/selectableItemBackground"
                     android:orientation="vertical"
                     android:paddingTop="@dimen/activity_horizontal_margin">
